[metadata]
name = rst2textile
version = 0.1.0
summary = rst2textile is docutils textile writer convert reStructuredText(rst) to Textile format.
description-file = README.rst
;download_url = http://pypi.python.org/pypi/rst2textile
home_page = https://bitbucket.org/shimizukawa/rst2textile
author = Takayuki SHIMIZUKAWA
author_email = shimizukawa@gmail.com
classifier = Development Status :: 3 - Alpha
    Topic :: Utilities
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Topic :: Documentation
    Topic :: Text Processing :: General
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.5
requires-dist = docutils

[files]
#TODO: users are install rst2textile, but docutils_textile package will be installed too.
packages = docutils_textile
#for '$ python -m rst2textile'
modules = rst2textile
#for '$ rst2textile.py ...
scripts = rst2textile.py

#but need MANIFEST.in for old setup.py
extra_files =
    README.rst
    MANIFEST.in
    setup.py
    test.py
    examples/sample.rst
    examples/sample.txt

[build]
build-base = _build

[sdist]
;formats = gztar
dist-dir = _dist

[bdist]
;formats = gztar
dist-dir = _dist

[upload_docs]
upload-dir = _build/sphinx/html

[aliases]
upload_docs = build_sphinx upload_docs
release = check -r -s register sdist upload_docs upload

[test]
test-suite = test.suite
